--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./myLogo.png" style="width: 80px;"/>
+    <link rel="icon" type="image/svg+xml" href="./myLogo.png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Yuvraj Yadav</title>
   </head>
   <body>
     <div id="root"></div>
